# cpp-learn-cmake-msvc-vcpkg-windowsapi

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
person/: CMakeLists.txt  person.cpp  person.h
